# NavAndLocalation

./: README.md
src/bring_up/: CMakeLists.txt  package.xml
src/bring_up/PCD/: RIGHT_X.pcd  RIGHT_X_VER2.pcd
src/bring_up/config/: MID360_config.json  fastlio_mid360.yaml  gicp.yaml  icp_registration.yaml  measurement_params.yaml  mid360_ver2.yaml  nav2_params.yaml  pointlio_mid360.yaml  segmentation.yaml
src/bring_up/launch/: bringup.launch.py
src/bring_up/map/: RIGHT_X.pgm  RIGHT_X.yaml  RIGHT_X_VER2.pgm  RIGHT_X_VER2.yaml
src/bring_up/rviz/: pointlio_cfg.rviz
src/bring_up/urdf/: sentry_robot_real.xacro
src/livox_ros_driver2/: CMakeLists.txt
src/livox_ros_driver2/src/: README.md
src/point_lio_ver2/: CMakeLists.txt  package.xml
src/point_lio_ver2/PCD/: scans.pcd
src/point_lio_ver2/include/: common_lib.h
src/point_lio_ver2/launch/: gdb_debug_example.launch.py  mapping_avia.launch.py  mapping_mid360.launch.py  mapping_mid360_ver2.launch.py
src/point_lio_ver2/src/: Estimator.cpp  IMU_Processing.h  laserMapping.cpp  li_initialization.cpp
src/rc_location/FAST_LIO/rviz/: fastlio.rviz
src/rc_location/FAST_LIO/src/: laserMapping.cpp
src/rc_location/icp_registration/src/: icp_registration.cpp
src/rc_location/small_gicp_relocalization/: CMakeLists.txt
src/rc_location/small_gicp_relocalization/config/: gicp.yaml
src/rc_location/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/rc_navigation/navigation/: CMakeLists.txt  package.xml
src/rc_navigation/navigation/launch/: bringup_navigation.py  navigation_launch.py  rviz_launch.py
src/rc_serial_driver/: CMakeLists.txt  package.xml
src/rc_serial_driver/config/: serial_driver.yaml
src/rc_serial_driver/include/rc_serial_driver/: packet.hpp  rc_serial_driver.hpp
src/rc_serial_driver/src/: rc_serial_driver.cpp
src/rm_simulation/pb_rm_simulation/launch/: rm_simulation.launch.py
src/rm_simulation/pb_rm_simulation/rviz/: rviz2.rviz
src/selfaim_lidar/: CMakeLists.txt  package.xml
src/selfaim_lidar/include/selfaim_lidar/: customMsg2scan.hpp
src/selfaim_lidar/launch/: startup.launch.py
src/selfaim_lidar/src/: customMsg2scan.cpp  customMsg2scan_ver2.cpp
src/serial_driver/config/: serial_driver.yaml
src/serial_driver/include/serial_driver/: packet.hpp  (+1 more)
src/serial_driver/src/: serial_driver.cpp
(+3 files in other folders)
